<resources>
    <string name="title_activity_pick_locations">Pick Locations Activity</string>
    <string name="home_screen_image_context">Brand logo</string>
    <string name="app_name">SmartRoute</string>
    <string name="welcome_to_smart_route">Welcome to SmartRoute</string>
    <string name="todo">TODO</string>
    <string name="start_your_journey">Start Your Journey</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="enter_start_location">Enter Start Location</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="smart_route">Plan The Trip</string>
    <string name="SR" />
    <string name="code_placeholder">Enter the trip Code</string>
    <string name="smart_route_logo">Smart Route</string>
    <string name="map_showing_your_current_route_or_location">Map showing your current route or location</string>
    <string name="remove_button">Remove last location</string>
    <string name="add_button">Add new location</string>
    <string name="trip_retrieve">Find Trip</string>
    <string name="start_location_end_location">Start Location → End Location</string>
    <string name="_500_km">500 km</string>
    <string name="_5_hours">5 hours</string>
    <string name="paris_moscow">Paris → Moscow</string>
    <string name="to_do">TODO</string>
    <string name="distance_500_km">Distance: 500 km</string>
    <string name="duration_5_hours">Duration: 5 hours</string>
    <string name="finish_trip">Finish Trip</string>
    <string name="paris_rome">Paris → Rome</string>
    <string name="distance_1420_km">Distance: 1420 km</string>
    <string name="duration_13_hours">Duration: 13 hours</string>
    <string name="saved_trips">Saved Trips</string>
    <string name="plan_explore_arrive_safely">Plan. Explore. Arrive Safely.</string>
    <string name="trip_history">trip History</string>
    <string name="previous_trips">Previous Trips</string>
    <string name="Trip_history">Trip History</string>
    <string name="trip_name">Trip Name</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="or">OR</string>
    <string name="moscow_dublin_test_input">Moscow → Dublin</string>
    <string name="test_distance">3 483 km</string>
    <string name="show_map">Show Map</string>
    <string name="time_to_travel">Time to travel</string>
    <string name="test_time_hours_value">39 h</string>
    <string name="from_to">From → To</string>
    <string name="_0_km">0 km</string>
    <string name="_0_min">0 min</string>
    <string name="show_trip_details">Show Details</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="step_title">%1$s → %2$s</string>
    <string name="step_distance">%.1f km</string>
    <string name="step_duration">%d min</string>
    <string name="arrow">%1$s → %2$s</string>
    <string name="code">Code: %1$s</string>
    <string name="d_min">%d min</string>
    <string name="_1f_km">%.1f km</string>
    <string name="close_map">Close Map</string>
    <string name="moscow_dublin">Moscow → Dublin</string>
    <string name="_3_000_km">3 000 km</string>
    <string name="_35_h">35 h</string>
    <string name="code_000000">Code: 000000</string>
    <string name="plan_another_trip">Plan Another Trip</string>
</resources>