...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF8F7"
    tools:context=".HomePageActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#045e09"
        android:text="@string/start_your_journey"
        android:textColor="@android:color/white"
        android:textSize="22sp"
...
